# Back-end/routes/api.php
@@ -3,10 +3,15 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\BusinessController;
-
+use App\Http\Controllers\UserController;
+use App\Http\Controllers\AuthController;
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
+
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/logout', [AuthController::class, 'logout']);
+
 Route::prefix("business")->group(function () {
 Route::get('/getbusiness', [BusinessController::class, 'getBusiness']);
 Route::post('/createbusiness', [BusinessController::class, 'createBusiness']);
@@ -14,10 +19,10 @@ Route::put('/updatebusiness/{id}', [BusinessController::class, 'updateBusiness']
 Route::delete('/deletebusiness/{id}', [BusinessController::class, 'deleteBusiness']);
 });
 Route::prefix("user")->group(function () {
-    Route::get('/getusers', [App\Http\Controllers\UserController::class, 'getUsers']);
-    Route::post('/createuser', [App\Http\Controllers\UserController::class, 'createUser']);
-    Route::get('/finduser/{user}', [App\Http\Controllers\UserController::class, 'findUser']);
-    Route::put('/edituser/{user}', [App\Http\Controllers\UserController::class, 'editUser']);
-    Route::patch('/toggleactiveuser/{user}', [App\Http\Controllers\UserController::class, 'toggleActiveUser']);
-    Route::delete('/deleteuser/{user}', [App\Http\Controllers\UserController::class, 'deleteUser']);
+    Route::get('/getusers', [UserController::class, 'getUsers']);
+    Route::post('/createuser', [UserController::class, 'createUser']);
+    Route::get('/finduser/{user}', [UserController::class, 'findUser']);
+    Route::put('/edituser/{user}', [UserController::class, 'editUser']);
+    Route::patch('/toggleactiveuser/{user}', [UserController::class, 'toggleActiveUser']);
+    Route::delete('/deleteuser/{user}', [UserController::class, 'deleteUser']);
 });
